--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,19 @@ dependencies {
     provided 'org.glassfish:javax.annotation:10.0-b28'
     compile 'com.jakewharton:butterknife:7.0.1'
 
+    // Bus
+    compile 'org.greenrobot:eventbus:3.0.0'
+
     // 工具类
     compile 'com.blankj:utilcode:1.9.3'
 
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     //Optional: see how to use the utility.
     compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
+
+    /*Android万能适配器，通吃所有的AbsListView、RecyclerView。*/
+    compile 'com.yuyh.easyadapter:library:1.1.5'
+
+    /* 图片加载 */
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
