--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     // Bus
     compile 'org.greenrobot:eventbus:3.0.0'
     // 工具类
-    compile 'com.blankj:utilcode:1.9.3'
+//    compile 'com.blankj:utilcode:1.9.3'
     compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
     //Optional: see how to use the utility.
     compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1@aar'
